gccida/c0/function_cannot_inline_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/function_cannot_inline_p/src/integrate.c:656:24: error: use of undeclared identifier 'unk_885950'
return ( const char *)&unk_885950; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/function_cannot_inline_p/src/integrate.c:662:24: error: use of undeclared identifier 'unk_8859C0'
return ( const char *)&unk_8859C0; 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/function_cannot_inline_p/src/obj/integrate.o] Error 1
